@@ -1,3 +1,8 @@
+2006-03-12  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp-util.el (tramp-advice-dired-insert-directory): Ensure it
+	isn't used with Emacs 22.
+
 2006-03-10  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp-util.el (tramp-advice-dired-insert-directory): New
